istio/coolstore-destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: coolstore
spec:
  host: www
  subsets:
  - name: v1
    labels:
      version: v1
