istio/inventory-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: inventory-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory
spec:
  hosts:
  - "*"
  gateways:
  - inventory-gateway
  http:
  - match:
    - uri:
        exact: /#/
    - uri:
        exact: /#/cart
    - uri:
        exact: /#/orders
    route:
    - destination:
        host: coolstore
        port:
          number: 8080
